k8s/backend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-lms-backend
spec:
  selector:
    matchLabels:
      app: lms-backend
  template:
    metadata:
      labels:
        app: lms-backend
    spec:
      containers:
      - name: lms-backend
        image: "surendergupta/sparrow_backend:2"
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
        - containerPort: 3000
