k8s/frontend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-lms-frontend
spec:
  selector:
    matchLabels:
      app: lms-frontend
  template:
    metadata:
      labels:
        app: lms-frontend
    spec:
      containers:
      - name: lms-frontend
        image: "surendergupta/sparrow_frontend:1"
        resources:
          limits:
            memory: "512Mi"
            cpu: "1000m"
        ports:
        - containerPort: 80
