k8s/backend_service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-lms-backend
spec:
  selector:
    app: lms-backend
  ports:
  - port: 3000
    targetPort: 5000
