k8s/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-lms-frontend
spec:
  selector:
    app: lms-frontend
  ports:
  - port: 80
    targetPort: 4200
