k8s/landing_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-lms-landing
spec:
  selector:
    app: lms-landing
  ports:
  - port: 80
    targetPort: 4300
